--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
 </head>
 <body>
     <h1 id="title">Registration</h1>
+    <div class="main-container">
+        <form action="" id="form">
+            <input type="email" id="email" placeholder="Email">
+            <br>
+            <input type="password" id="password" placeholder="Password">
+            <button id="visible" type="button">&#x1F441;</button>
+            <br>
+            <button id="signup" type="button">Sign Up</button>
+        </form>
+    
+    </div>
+
+    <h2 id="sign-in">Already Have An Account?</h2>
 </body>
 
-<div class="main-container">
-    <form action="" id="form">
-        <input type="email" id="email">
-        <br>
-        <input type="password" id="password">
-        <br>
-        <button id="signup" type="button">Sign Up</button>
-    </form>
 
-</div>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
 <script src="script.js"></script>
 </html>
