--- a/plus.html
+++ b/plus.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="plus.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media App</title>
+    <title>Upload Image</title>
 </head>
 <body>
-   <nav id="nav-bar">
-    <div class="demo"><h1>good</h1></div>
-    <div class="image"><img src="photo.png" alt="" id="title"></div>
-    <div class="list-parent">
-        <ul class="list">
-           <li><button id="plus">+</button></li>
-           <li><button id="sign-out">Sign Out</button></li>
-        </ul>
-    </div>
-      
-   </nav>
-
-   <div id="main-container"></div>
+    <input type="file" id="files">
+    <br>
+    <div class="image-or-video" id="image-or-video"></div>
+    <br>
+    <button id="upload">Upload</button>
 </body>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
-<script src="main.js"></script>
+<script src="plus.js"></script>
 </html>
